# invest-platform

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2c39dd9ed3ef_add_model_runs_and_predictions_tables.py  e79b91f0a956_add_model_runs_and_predictions_tables.py  fc874f186497_create_tickers_and_price_bars_tables.py
backend/app/: main.py
backend/app/core/: config.py  logging.py
backend/app/data/: universe.py
backend/app/data/ingestion/: base.py  loader.py  yfinance_client.py
backend/app/data/storage/: db.py  models.py
backend/app/execution/: order_service.py  t212_client.py
backend/app/features/: feature_store.py  fundamental.py  technical.py
backend/app/models/: labeling.py  run_id.py  split.py  training.py
backend/tests/unit/: test_feature_store.py  test_features_fundamental.py  test_features_technical.py  test_health.py  test_ingestion.py  test_labeling.py  test_modeling_loop.py  test_split.py
docs/: architecture.md
frontend/: README.md
infra/: docker-compose.yml
